[metadata]
name = sedna
summary = Sedna contains core methods of test case on an OpenStack environment.
description-file =
    README.md
author = PoleX Test Developers
author-email = liqian@polex.com.cn
home-page = 10.0.63.41:9999/flora.html
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    sedna

[entry_points]
console_scripts =
    sedna-sampler = sedna.console.sampler:main
    sedna-master = sedna.rest.master:run

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sedna/locale
domain = sedna

[update_catalog]
domain = sedna
output_dir = sedna/locale
input_file = sedna/locale/sedna.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sedna/locale/sedna.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source

[wheel]
universal = 1

[pbr]
warnerrors = true

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0